--- a/app/views/blogposts/index.html.erb
+++ b/app/views/blogposts/index.html.erb
@@ -100,17 +100,17 @@
 
       <ul class="extraTab">
         <li><%= link_to "In Pursuit of the Dream: How I Landed a Position as A White House Intern.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "3 things I wish I did during college that would have made applying to Grad School easier.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Landing an opportunity at Google; Insights from a two-time intern and full-time employee.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Landing an Opportunity at Google; Insights from a Former Intern and Full-Time Employee.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Standing Out in a Crowd: How to Get an Internship on Wall Street.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "Internship to Offer: Getting the Full-Time Offer.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
       </ul>
       <br>
 
       <h4 class="tab">Full-time Jobs</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "Transitioning from Finance to Tech, Here's How I Did it.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "Against The Odds: Advice on Breaking into the Sports World.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "Navigating the Case Interview to get into Management Consulting.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
 
@@ -120,10 +120,10 @@
       <h4 class="tab">Life Skills</h4>
 
       <ul class="extraTab">
+        <li><%= link_to "The Art & Science of Networking.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "4 Interview Techniques that May Surprise You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
         <li><%= link_to "Get a Letter of Recommendation from Someone Who Doesn't Remember You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "The Art & Science of Networking, Part 1.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "The Art & Science of Networking, Part 2.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li> 
       </ul>
       <br>
 
