Update header for FB

--- a/app/views/layouts/blogheader.html.erb
+++ b/app/views/layouts/blogheader.html.erb
@@ -16,11 +16,15 @@
     <meta property="og:title" content="AdviceShare Blog" />
     <meta property="fb:admins" content="755565431"/>
     <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size_v2.png" />
+    <meta property="og:url" content="http://www.AdviceShare.co/blog" />
+    <meta property="og:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa." />
     
     <!--Twitter-->
     <meta name="twitter:title" content="AdviceShare Blog">
     <meta name="twitter:card" content="blog">
     <meta name="twitter:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size_v2.png">
+    <meta name="twitter:url" content="http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions" />
+    <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
 
 
     <title><%= full_title(yield(:title)) %></title>
