--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title, 'How we landed the following professional and academic opportunities') %>
+<% provide(:title, 'Insights on how we landed the following professional and academic opportunities.') %>
 
 <% content_for :for_socialmedia do %>
   <!--<meta http-equiv="refresh" content="0; url=http://www.adviceshare.co/blog/highly-coveted-professional-and-academic-positions">-->
   <!--Facebook-->
-    
+  <meta property="og:description" content="Blog | Insights on how we landed the following professional and academic opportunities." />  
         
     <!--Twitter-->
     
