--- a/app/views/blogposts/openingPost.html.erb
+++ b/app/views/blogposts/openingPost.html.erb
@@ -13,7 +13,7 @@
 <!--Put picture for post here -->
 <br>
 <div class="row">
-  <a href="http://www.AdviceShare.co/blog/" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing+Professional+and+Academic+Positions.jpg" /></a>
+  <a href="" title="Adviceshare blog" alt="Grad School-Internships-Full Time Jobs-Life Skills"><img class="blogpostimage" src="https://s3.amazonaws.com/AdviceShare/Blog+Post+Images/Landing+Professional+and+Academic+Positions.jpg" /></a>
 </div>
 
 <!--Put Blog post title here-->
