--- a/app/views/layouts/noheader_nofooter.html.erb
+++ b/app/views/layouts/noheader_nofooter.html.erb
@@ -22,6 +22,30 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 <meta property="og:description" content="AdviceShare makes it easier for people seeking professional and academic advice to connect with those who want to help, and vice versa." />
 <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size.png" />
 
+
+<!--Meta TAGS-->
+    <meta name="description" content="AdviceShare is like match.com for Advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
+    <link rel="author" href="https://plus.google.com/+MalcolmEvans/">
+
+  <!--<% if content_for? :for_socialmedia %>
+    <%= yield :for_socialmedia %>
+  <% end %>-->
+
+    <!--Facebook-->
+    <meta property="og:type" content="blog"/>
+    <meta property="og:title" content="AdviceShare" />
+    <meta property="fb:admins" content="755565431"/>
+    <meta property="og:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size_v2.png" />
+    <meta property="og:url" content="http://www.AdviceShare.co" />
+    
+    
+    <!--Twitter-->
+    <meta name="twitter:title" content="AdviceShare Blog">
+    <meta name="twitter:card" content="blog">
+    <meta name="twitter:image" content="https://s3.amazonaws.com/AdviceShare/AdviceShare+favicon_smaller+size_v2.png">
+    <meta name="twitter:url" content="http://www.AdviceShare.co" />
+    <meta name="twitter:description" content="AdviceShare is like match.com for advice. We make it easier for people seeking an edge to connect with those who want to help, and vice versa.">
+
     <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag "application", media: "all",
                                            "data-turbolinks-track" => true %>
