Update Adviser sign up view

--- a/app/views/advisors/new.html.erb
+++ b/app/views/advisors/new.html.erb
@@ -27,12 +27,12 @@
         </div>
         <div class="clearfix content-heading explainergraphics withleftmargin">
           <h4 class="getridofspaceatbottom">Your preferences.</h4>
-          <small class="changesmallfont">Let us know who you want to help. Only want to offer advice to people from your alma mater with GPAs at a certain level? We'll take note and do our best to make it happen.<br><br></small>
+          <small class="changesmallfont">Let us know who you want to help. Only want to offer advice to people from your alma mater? We'll take note and do our best to make it happen.<br><br></small>
 
         </div>
         <div class="clearfix content-heading explainergraphics withleftmargin">
           <h4 class="getridofspaceatbottom">Your own personal assistant.</h4>
-          <small class="changesmallfont">Well coordinate (a call, skype, chat room, etc.) to work around your busy schedule. No more headaches trying to find a time to chat.<br><br></small>
+          <small class="changesmallfont">Well coordinate (a call, skype, chat, etc.) to work around your schedule. No more headaches trying to find a time to connect.<br><br></small>
         </div>
 
       </div>
