--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -21,7 +21,7 @@
     </div>
 
     <div class="span8">
-      <h1 class="text-center"><%= link_to "How we landed the following professional and academic positions", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
+      <h1 class="text-center"><%= link_to "How we landed the following professional and academic opportunities", "http://www.AdviceShare.co/blog/highly-coveted-professional-and-academic-positions", class: 'NoUnderlineForLink' %></h1>
       <br>
     </div>
 
