Remove Coming Soon Links

--- a/app/views/blogsignups/new.html.erb
+++ b/app/views/blogsignups/new.html.erb
@@ -79,53 +79,53 @@
     <br><br>
     We want to share our strategies, mistakes and challenges of successfully securing various professional and academic opportunities. We'll be curating posts from our team at <a class="NoUnderlineForAuthorLinks" href="http://www.adviceshare.co" target="_blank">AdviceShare</a> and fellow bloggers.
     <br><br>
-    Here's an idea of what we'll be covering in our series:<h5>
+    Here's a quick overview of what we'll be writing about in our series. If you want to be notified when a post goes live just sign up below!<h5>
     <br>
 
        <h4 class="tab">Grad School</h4>
        <ul class="extraTab">
-        <li><%= link_to "Here’s exactly what I did to get into Columbia Law School.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Applying to Business School: Insights from a first year student at Harvard.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li class="blogPostText">Here’s exactly what I did to get into Columbia Law School.</li>
+        <li class="blogPostText">Applying to Business School: Insights from a first year student at Harvard.</li>
+        <li class="blogPostText">3 Things I Wish I Did During College That Would Have Made Applying to Grad School Easier.</li>
+        <li class="blogPostText">Getting Into MFA Programs Are Tough. Here is How I got into the Actors Studio Drama School Two Months Before Classes Started.</li>
+        <!--<li><%= link_to "Applying to Business School: Insights from a first year student at Harvard.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>-->
       </ul>
       <br>
 
       <h4 class="tab">Internships</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "In Pursuit of the Dream: How I Landed a Position as A White House Intern.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Landing an Opportunity at Google; Insights from a Former Intern and Full-Time Employee.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Standing Out in a Crowd: How to Get an Internship on Wall Street.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Graduating from your Internship: Getting the Full-Time Offer.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
+        <li class="blogPostText">In Pursuit of the Dream: How I Landed a Position as A White House Intern.</li>
+        <li class="blogPostText">Landing an Opportunity at Google; Insights from a Former Intern and Full-Time Employee.</li>
+        <li class="blogPostText">Standing Out in a Crowd: How to Get an Internship on Wall Street.</li>
+        <li class="blogPostText">Graduating from your Internship: Getting the Full-Time Offer.</li>
       </ul>
       <br>
 
       <h4 class="tab">Full-time Jobs</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "Transitioning from Finance to Tech, Here's How I Did it.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "How I Got a Job on Wall Street Even Though I Knew Nothing about Finance.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Against The Odds: Advice on Breaking into the Sports World.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Navigating the Case Interview to break into Management Consulting.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-
+        <li class="blogPostText">Transitioning from Finance to Tech, Here's How I Did it.</li>
+        <li class="blogPostText">How I Got a Job on Wall Street Even Though I Knew Nothing about Finance.</li>
+        <li class="blogPostText">Against The Odds: Advice on Breaking into the Sports World.</li>
+        <li class="blogPostText">Navigating the Case Interview to break into Management Consulting.</li>
       </ul>
       <br>
 
       <h4 class="tab">Life Skills</h4>
 
       <ul class="extraTab">
-        <li><%= link_to "The Art & Science of Networking.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "4 Interview Techniques that May Surprise You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "Getting a Letter of Recommendation from Someone Who Doesn't Remember You.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li>
-        <li><%= link_to "5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.", blog_postComingSoon_path, class: 'NoUnderlineForBlogLinks blogPostText' %></li> 
+        <li class="blogPostText">The Art & Science of Networking.</li>
+        <li class="blogPostText">4 Interview Techniques that May Surprise You.</li>
+        <li class="blogPostText">Getting a Letter of Recommendation from Someone Who Doesn't Remember You.</li>
+        <li class="blogPostText">5 Things The Real World Has Taught Me Since I Graduated 3 Years Ago.</li>
       </ul>
       <br>
 
 
 
     <h5 class="blogPostText">Have suggestions for additional posts in the series? Want to share your own experience? Just let us know in the comments below or
-    <a class="NoUnderlineForBlogLinks" href="mailto:general@AdviceShare.co">email us!</a> If you want to be notified when a post launches just sign up below.
+    <a class="NoUnderlineForBlogLinks" href="mailto:general@AdviceShare.co">email us!</a> 
     <br>
     <br>
     Thank you for the support! Please share by clicking below if its not too much trouble :)
@@ -140,6 +140,7 @@
  <br>
  <br>
 <br>
+
 
  <%= render 'blogsignups/blogShareSignups' %>
 
